// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jrpc returns node info 1`] = `
Object {
  "connections": "12",
  "currentBlock": "40",
  "latestBlock": "60",
  "status": "syncing",
}
`;

exports[`jrpc takes offset into account when calculating status 1`] = `
Object {
  "connections": "12",
  "currentBlock": "40",
  "latestBlock": "50",
  "status": "healthy",
}
`;
